# crs-linter

./: .pre-commit-config.yaml  APPROVED_TAGS  DEVELOPMENT.md  FILENAME_EXCLUSIONS  README.md  TESTS_EXCLUSIONS  generate_rules_docs.py  pyproject.toml  renovate.json
.github/: copilot-instructions.md
.github/workflows/: codeql-analysis.yml  pypi-release.yml  pypi-test-release.yml  test.yml
examples/: exemption_example.conf
src/crs_linter/: cli.py  exemptions.py  linter.py  logger.py  parseseclang.py  rule.py  rules_metadata.py  utils.py
src/crs_linter/rules/: __init__.py  approved_tags.py  args_names_json_prefix.py  capture.py  check_capture.py  collection_capture_chain.py  crs_tag.py  ctl_audit_log.py  deprecated.py  duplicated.py  duplicated_ids.py  ignore_case.py  indentation.py  lowercase_ignorecase.py  no_negated_request_cookies.py  ordered_actions.py  pass_nolog.py  pl_consistency.py  rule_tests.py  standalone_txn.py  variables_usage.py  version.py
tests/: conftest.py  test_args_names_json_prefix.py  test_check_capture.py  test_cli.py  test_collection_capture_chain.py  test_exemptions.py  test_exemptions_integration.py  test_generate_rules_docs.py  test_indentation.py  test_linter.py  test_no_negated_request_cookies.py  test_pass_nolog.py  test_rule_tests.py  test_rules_metadata.py  test_standalone_txn.py  test_utils.py
