[project]
name = "crs-linter"
version = "0.1.0"
description = "CRS linter"
authors = [
  {name = "Ervin Hegedus", email = "airween@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/coreruleset/crs-linter"
repository = "https://github.com/coreruleset/crs-linter"
documentation = "https://github.com/coreruleset/crs-linter"
requires-python = ">=3.9"

keywords = ["owasp", "crs", "linter"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

packages = [
    { include = "crs_linter", from = "src" }
]

# Requirements
dependencies = [
    "msc_pyparser >=1.2.1"
]

[project.scripts]
secrules-parser = 'crs_linter.cli:main'

[dependency-groups]
dev = [
  "pytest >=8.1.1,<9"
]

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

